@startuml
class screens.LandingActivity {
# void onCreate(Bundle)
}

class screens.MathProblemsActivity {
- {static} String PREF_MATH_QUESTION
- {static} String PREF_MATH_USER_INPUT
- {static} String PREF_MATH_CORRECT_ANSWER
- StringBuilder userInput
- Handler handler
- TextView tvCorrect
- User user
- TextView tvQuestion
- MaterialCardView cvAnswerContainer
- int correctAnswer
# void onCreate(Bundle)
# void onSaveInstanceState(Bundle)
# void onResume()
- void fetchLatestStats()
- void updateStatsUI()
- void generateProblem()
- int rand(int,int)
- void setupKeypad()
- void deleteLast()
- void clearInput()
- void checkAnswer()
- DailyStats getTodayStats(String)
- void showFeedback(boolean)
# void onPause()
# void onDestroy()
}


enum screens.Operation {
+  ADD
+  SUBTRACT
+  MULTIPLY
+  DIVIDE
+  POWER
+  SQRT
}

class screens.MainActivity {
# void onCreate(Bundle)
# void onResume()
}

class screens.LoginActivity {
# Validator validator
- EditText editTextEmail
# void onCreate(Bundle)
- void tryLogin()
- boolean validateInput(String,String)
}




bases.BaseActivity <|-- screens.LandingActivity
bases.BaseActivity <|-- screens.MathProblemsActivity
bases.BaseActivity <|-- screens.MainActivity
bases.BaseActivity <|-- screens.LoginActivity
@enduml